# STC_SMA

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
include/: algorithm_collection.h  algorithm_executor.h  data_writer_xlsx.h  timer.h
libs/libxlsxwriter/include/xlsxwriter/: workbook.h
src/: algorithm_collection.cpp  algorithm_executor.cpp  data_writer_xlsx.cpp  timer.cpp
